added second adventure line

--- a/twine_babylon_v1/index.html
+++ b/twine_babylon_v1/index.html
@@ -27,10 +27,14 @@
         .display {
             opacity: 0;
         }
+        .display2 {
+            opacity: 0;
+        }
     </style>
 </head>
 
 <body onload="main.start()">
+    <iframe class="responsive-iframe display2" src="./animation1/index.html"></iframe>
     <iframe class="responsive-iframe display" src="./3d/index.html"></iframe>
     <iframe class="responsive-iframe story" src="./twine/story.html"></iframe>
 </body>
