--- a/twine_babylon_v1/twine/story.html
+++ b/twine_babylon_v1/twine/story.html
@@ -19,22 +19,22 @@
 
 a {
   color:white;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript">
-
-window.addEventListener("message", function(event){
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.addEventListener("message", function(event){
      route(event.data)
 }, false);
 
 function route(data) {
   switch(data){
             case "goto_end":
-                window.story.show("thankyou");
+                story.show("thankyou");
                 break;
       		case "story_reset":
                 //window.story.show("start");
                 break;
         }
-}</script><tw-passagedata pid="1" name="start" tags="" position="700,375" size="100,100">You are in a dark room, what do you do?
+}
+
+</script><tw-passagedata pid="1" name="start" tags="" position="700,375" size="100,100">You are in a dark room, what do you do?
 
 [[search for a light switch|lightSearch]]
 
@@ -51,10 +51,13 @@ Something interesting in front of you, what do you do?
 %&gt;
 </tw-passagedata><tw-passagedata pid="3" name="askSomeone" tags="" position="825,325" size="100,100">You don&#39;t hear a thing...
 
-[[search for a light switch|lightSearch]]</tw-passagedata><tw-passagedata pid="4" name="thankyou" tags="" position="700,500" size="100,100">Well done! This concludes the Test.
+[[search for a light switch|lightSearch]]</tw-passagedata><tw-passagedata pid="4" name="thankyou" tags="" position="1400,300" size="100,100">Well done! You Revealed a Map!
 
-Thank you!
-</tw-passagedata><tw-passagedata pid="5" name="lightSearch" tags="" position="825,500" size="100,100">You touch the walls and noticed a light switch, what do you do?
+Including the location of a spaceship!
+
+[[Woah! lets go!|gotoSpaceship]]
+
+[[I will pass|finishgame]]</tw-passagedata><tw-passagedata pid="5" name="lightSearch" tags="" position="825,500" size="100,100">You touch the walls and noticed a light switch, what do you do?
 
 [[turn on|light]]</tw-passagedata><tw-passagedata pid="6" name="inspect the object" tags="" position="1075,625" size="100,100">It seems to be a set of tiles, perhaps clicking on all tiles will reveal something, perhaps not...
 
@@ -64,7 +67,23 @@ Thank you!
    window.postMessage(&quot;story_reset&quot;, &quot;*&quot;);
 %&gt;
 
-[[start]]</tw-passagedata></tw-storydata>
+[[start]]</tw-passagedata><tw-passagedata pid="9" name="gotoSpaceship" tags="" position="1400,425" size="100,100">You find the spaceship, what do you do?
+
+[[board]]
+[[Leave|finishgame]]</tw-passagedata><tw-passagedata pid="10" name="finishgame" tags="" position="1525,425" size="100,100">Who knows what new adventures will come on the next chapter!
+
+This completes the test! 
+
+Thank you for playing!
+</tw-passagedata><tw-passagedata pid="11" name="board" tags="" position="1400,550" size="100,100">Once you are inside of the spaceship, you hear a loud tremor, and all the sudden the doors close and the ship takes off, after a short while it stops in the middle of space and gives you control of the hyperdrive, as if it wanted you to push the throttle...
+
+[[continue|game2]]
+
+&lt;%
+   window.postMessage(&quot;show_spaceship&quot;, &quot;*&quot;);
+%&gt;</tw-passagedata><tw-passagedata pid="12" name="game2" tags="" position="1400,675" size="100,100">&lt;%
+   window.postMessage(&quot;start_game2&quot;, &quot;*&quot;);
+%&gt;</tw-passagedata></tw-storydata>
 		<script>
 		(function(){function r(e,n,t){function o(i,f){if(!n[i]){if(!e[i]){var c="function"==typeof require&&require;if(!f&&c)return c(i,!0);if(u)return u(i,!0);var a=new Error("Cannot find module '"+i+"'");throw a.code="MODULE_NOT_FOUND",a}var p=n[i]={exports:{}};e[i][0].call(p.exports,function(r){var n=e[i][1][r];return o(n||r)},p,p.exports,r,e,n,t)}return n[i].exports}for(var u="function"==typeof require&&require,i=0;i<t.length;i++)o(t[i]);return o}return r})()({1:[function(require,module,exports){
 "use strict";window.either=function(){for(var n=[],t=0;t<arguments.length;t++)if(arguments[t]instanceof Array)for(var r=0;r<arguments[t].length;r++)n.push(arguments[t][r]);else n.push(arguments[t]);return n[_.random(n.length-1)]},window.hasVisited=function(){var n=null;if(1==arguments.length)return null!=(n=window.story.passage(arguments[0]))&&window.story.history.includes(n.id);for(var t=0;t<arguments.length;t++)if(null==(n=window.story.passage(arguments[t]))||0==window.story.history.includes(n.id))return!1;return!0},window.visited=function(){for(var n=[],t=[],r=0;r<arguments.length;r++){var e=window.story.passage(arguments[r]);null!=e&&(t=window.story.history.filter(function(n){return n==e.id})),n.push(t.length)}return Math.min.apply(Math,n)},window.renderToSelector=function(n,t){var r=window.story.passage(t);null!=r&&$(n).html(r.render())},window.getStyles=function(){return $.when.apply($,$.map(arguments,function(n){return $.get(n,function(n){$("<style>"+n+"</style>").appendTo("head")})}))};
