updated index and removed base path

--- a/ar_tests/reality_comp1/index.html
+++ b/ar_tests/reality_comp1/index.html
@@ -14,11 +14,10 @@
     <title>HTML Test Page</title>
     <meta name="description" content="Our first page">
     <meta name="keywords" content="html tutorial template">
-    <base href="/ar_tests/reality_comp1/" target="_blank">
 </head>
 
 <body>
-    <a class="hidden" rel="ar" href="/assets/test1.reality"><img class="image-model" src="/assets/thumbnail.png" alt=""
+    <a class="hidden" rel="ar" href="/ar_tests/reality_comp1/assets/test1.reality"><img class="image-model" src="/ar_tests/reality_comp1/assets/thumbnail.png" alt=""
             data-hires-status="pending">
         <div class="block-link">Click here to preview model</div>
     </a>
