--- a/ar_tests/reality_comp1/index.html
+++ b/ar_tests/reality_comp1/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <a class="hidden" rel="ar" href="/ar_tests/reality_comp1/assets/test1.reality"><img class="image-model" src="/ar_tests/reality_comp1/assets/thumbnail.png" alt=""
+    <a class="hidden" rel="ar" href="https://www.dropbox.com/s/k6v5sbpozo6f5n6/freestyle.reality?raw=1"><img class="image-model" src="/ar_tests/reality_comp1/assets/thumbnail.png" alt=""
             data-hires-status="pending">
         <div class="block-link">Click here to preview model</div>
     </a>
